<resources>
    <string name="app_name">雀チャット</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home TL</string>
    <string name="title_second">Private TL</string>
    <string name="title_third">Notification</string>
    <string name="title_fourth">DM</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="userName">ユーザー名（20文字以内）</string>
    <string name="userNameEdit">ユーザー名変更</string>
    <string name="userNameInput">新しいユーザー名を入力（20文字以内）</string>
    <string name="userName2">ユーザー名を入力</string>
    <string name="email">メールアドレス</string>
    <string name="emailInput">メールアドレスを入力</string>
    <string name="password">パスワード</string>
    <string name="passwordConfirm">パスワード（確認）</string>
    <string name="passwordInput">パスワードを入力</string>
    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="register">登録</string>
    <string name="explanationInput">説明を入力</string>
    <string name="explanation">説明</string>
    <string name="postCreate">投稿</string>
    <string name="createAccount">アカウント作成</string>
    <string name="forgetPassword">パスワードを忘れた場合</string>
    <string name="inputCorrectly">正しく入力してください</string>
    <string name="profileEdit">プロフィール編集</string>
    <string name="setting">設定</string>
    <string name="selectPostImage">画像を選択（１枚のみ）</string>
    <string name="selectIconImage">画像を選択</string>
    <string name="postImage">画像</string>
    <string name="noImage">NO IMAGE</string>
    <string name="wayCut">切り</string>
    <string name="wayCutCall">切りリーチ</string>
    <string name="waySilent">切りダマ</string>
    <string name="pon">ポン</string>
    <string name="chi">チー</string>
    <string name="kan">カン</string>
    <string name="through">スルー</string>
    <string name="introductionEdit">自己紹介変更</string>
    <string name="introductionInput">新しい自己紹介を入力</string>
    <string name="profileImageEdit">プロフィール画像変更</string>
    <string name="createNewChoices">選択肢を作成</string>
    <string name="decide">決定</string>
    <string name="selectTile">牌を選択</string>
    <string name="passwordForget">パスワードを忘れた場合</string>
    <string name="submit">送信</string>
    <string name="loading">Loading…</string>
    <string name="postNumber">投稿数</string>
    <string name="action_0">切り</string>
    <string name="action_1">切りリーチ</string>
    <string name="action_2">切りダマ</string>
    <string name="action_3">ポン</string>
    <string name="action_4">チー</string>
    <string name="action_5">カン</string>
    <string name="action_6">スルー</string>
    <string name="action_7">和了</string>
    <string name="space">  </string>
    <string name="cancel">キャンセル</string>
    <string name="next">次へ</string>
    <string name="follow">フォローする</string>
    <string name="following">フォロー中</string>
    <string name="commentInput">コメントを入力</string>
    <string name="messageInput">メッセージを入力</string>
    <string name="selectUser">ユーザーを選択</string>
    <string name="time1">yyyy/M/d kk:mm</string>
    <string name="time2">M/d kk:mm</string>
    <string name="updatedTime">更新日時 yyyy/M/d kk:mm</string>
    <string name="follower">followers</string>
    <string name="followNow">follow</string>
    <string name="delete">削除</string>
    <string name="edit">編集</string>
    <string name="starNumber">★ ×</string>
    <string name="favoriteList">お気に入りリスト</string>
    <string name="favorite">お気に入り</string>
    <string name="yes">はい</string>
    <string name="deleteConfirm">本当に削除しますか？</string>
    <string name="noFavorites">お気に入りはありません</string>
    <string name="imageWarning">※画像の反映のためにはアプリの再起動が必要です。</string>
    <string name="complete">編集完了</string>
    <string name="newExplanation">新しい説明を入力</string>
    <string name="noFollower">NO POST</string>
    <string name="noDMRoom">DMはありません</string>
    <string name="noFollowUser">現在フォロー中のユーザはいません</string>
    <string name="noPost">投稿がありません</string>
    <string name="followJapanese">フォロー</string>
    <string name="followerJapanese">フォロワー</string>
    <string name="notification">プッシュ通知の実装まで\nしばらくお待ちください</string>
    <string name="appName1">雀</string>
    <string name="appName2">チャット</string>
    <string name="percent">%1$d%%</string>
    <string name="allNumber">全%1$d票</string>
    <string name="fcmTokenServerKey">key=AAAA_NErUg4:APA91bEn2fJawF_R5GzZjF8t4IFtbA8zpc_ODENTeG20brKTnJjfNVLIymzTRwYCL06PIc6tNodjzdQdJdC_GIhHwWuDBKlhHU_y5o9w29wOmdSjxaPg3WuikmAULjXkSlGKOSR5aYwJ</string>
    <string name="dMNotifyTitle">%1$sからメッセージ</string>
    <string name="channel_name_0">DM通知</string>
    <string name="channel_description_0">自分宛てにDMが送信された時に通知します</string>
    <string name="logoutConfirm">ログアウトしますか？</string>
    <string name="noNotification">通知はありません</string>
    <string name="followedTitle">%1$sにフォローされました</string>
    <string name="channel_name_1">フォロー通知</string>
    <string name="channel_description_1">自分がフォローされた時に通知します</string>
    <string name="favoriteTitle">%1$sがお気に入り登録しました</string>
    <string name="channel_name_2">お気に入り登録通知</string>
    <string name="channel_description_2">自分の投稿がお気に入り登録された時に通知します</string>
    <string name="commentTitle">%1$sがあなたの投稿にコメントしました</string>
    <string name="channel_name_3">コメント通知</string>
    <string name="channel_description_3">自分の投稿にコメントがされた時に通知します</string>
</resources>