<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="explanation"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

        <variable
            name="post"
            type="com.kaz_furniture.mahjongChat.data.Post" />

    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="40dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/selectImageButton"
                android:text="@string/selectPostImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postImageView"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/warningText"
                android:text="@string/imageWarning"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/selectImageButton"
                app:layout_constraintEnd_toEndOf="@id/selectImageButton"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/choice_divider"
                android:showDividers="middle"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/warningText"
                android:id="@+id/choicesParentView"
                android:orientation="vertical"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createChoicesButton"
                app:layout_constraintTop_toBottomOf="@id/choicesParentView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/createNewChoices"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/exExplanation"
                android:textSize="18sp"
                android:text="@string/explanation"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/createChoicesButton"
                app:layout_constraintStart_toStartOf="@id/explanationInput"
                app:layout_constraintEnd_toEndOf="@id/explanationInput"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/explanationInput"
                android:hint="@string/newExplanation"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@={explanation}"
                app:layout_constraintTop_toBottomOf="@id/createChoicesButton"
                android:autofillHints="@string/newExplanation"
                android:inputType="textMultiLine"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/explanationInput"
                android:id="@+id/postButton"
                android:text="@string/complete"
                android:layout_marginTop="42dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/postImageView"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                app:postImage="@{post}"
                tools:src="@drawable/screenshot_20201213_235035"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/postImage" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_circular"
                android:visibility="invisible"
                android:elevation="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@android:style/Widget.ProgressBar.Large"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>