<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="post"
            type="com.kaz_furniture.mahjongChat.data.Post" />

        <variable
            name="userId"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.MainActivity">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:id="@+id/userIconImage"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="2dp"
            app:userIcon="@{userId}"
            tools:src="@drawable/ic_baseline_email_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/postItemImage"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/postUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@{post.userName}"
            app:layout_constraintStart_toEndOf="@id/userIconImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/postItemImage"
            tools:text="@string/userName2"/>

        <TextView
            android:id="@+id/createdTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postUserName"
            tools:text="@string/time1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/postItemImage"
            android:scaleType="fitCenter"
            app:postImage="@{post}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createdTime"
            tools:src="@drawable/screenshot_20201213_235035"
            android:contentDescription="@string/postImage" />

        <TextView
            android:id="@+id/explanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="@{post.explanation}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postItemImage"
            tools:text="@string/explanation"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#888888"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/explanation"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
