<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/userIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/userIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/postNumber"
                    android:id="@+id/postNumber"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/explanation"
                    app:layout_constraintTop_toBottomOf="@id/postNumber"
                    app:layout_constraintStart_toEndOf="@id/userIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_gravity="start"
                    android:text="@string/explanation"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName2"
                android:textSize="22sp"
                android:id="@+id/userName"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>