<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="post"
            type="com.kaz_furniture.mahjongChat.data.Post" />

        <variable
            name="userId"
            type="String" />

        <variable
            name="commentContent"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/commentEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                    <ImageView
                        android:id="@+id/userIcon"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:userIcon="@{userId}"
                        tools:src="@drawable/m1" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/noImage"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@id/explanation"
                        app:layout_constraintStart_toEndOf="@id/userIcon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_scrollFlags="enterAlwaysCollapsed" />

                    <TextView
                        android:id="@+id/explanation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/explanation"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/userIcon" />

                    <TextView
                        android:id="@+id/createdTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/explanation" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/postImageView"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/postImage"
                    android:scaleType="centerCrop"
                    app:postImage="@{post}"
                    tools:src="@drawable/screenshot_20201213_235035" />
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <!--            <com.kaz_furniture.mahjongChat.view.ChoicesView-->
                <!--                android:id="@+id/choicesView"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                app:layout_constraintStart_toStartOf="parent"-->
                <!--                app:layout_constraintTop_toTopOf="parent" />-->

                <!--            <com.kaz_furniture.mahjongChat.view.CommentsView-->
                <!--                android:id="@+id/commentsView"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                app:layout_constraintStart_toStartOf="parent"-->
                <!--                app:layout_constraintTop_toBottomOf="@id/choicesView" />-->

                <com.kaz_furniture.mahjongChat.view.ChoicesCommentsView
                    android:id="@+id/choicesCommentsView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/commentInput"
            android:text="@={commentContent}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/submitButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="@id/commentEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/commentEditText"
            app:layout_constraintTop_toTopOf="@id/commentEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
